--- a/okteto-stack.yml
+++ b/okteto-stack.yml
@@ -14,7 +14,7 @@ services:
       storage: 4Gi
     volumes: 
       ["/developer/.config/Code",
-      "/developer/.vscode,
+      "/developer/.vscode",
       "/developer/.ssh",
       "/developer/project"]
     entrypoint: /developer/bin/start-shell
